--- a/template/list.html
+++ b/template/list.html
@@ -7,7 +7,7 @@
 <div class="list">
   {% for item in list %} {% if loop.first %}
   <article class="first-entry entry">
-    <a href="{{baseUrl}}{{item.postLink}}" class="link"></a>
+    <a href="{{baseUrl}}{{item.url}}" class="link"></a>
     <header>
       <h2>{{item.title}}</h2>
     </header>
@@ -15,12 +15,12 @@
       <p>{{item.description}}</p>
     </div>
     <footer>
-      <span>{{item.date}}</span>
+      <span>{{item.updateTime}}</span>
     </footer>
   </article>
   {% else %}
   <article class="entry">
-    <a href="{{baseUrl}}{{item.postLink}}" class="link"></a>
+    <a href="{{baseUrl}}{{item.url}}" class="link"></a>
     <header>
       <h2>{{item.title}}</h2>
     </header>
@@ -28,7 +28,7 @@
       <p>{{item.description}}</p>
     </div>
     <footer>
-      <span>{{item.date}}</span>
+      <span>{{item.updateTime}}</span>
     </footer>
   </article>
   {% endif %} {% endfor %}
