feat:hide categories when they are more than 4

--- a/template/article.html
+++ b/template/article.html
@@ -6,11 +6,11 @@
 />
 <article class="post">
   <header class="post-header">
-    <h2 class="post-title">{{title}}</h2>
-    <p class="post-desc">{{description}}</p>
+    <h2 class="post-title">{{page.title}}</h2>
+    <p class="post-desc">{{page.description}}</p>
     <div class="post-meta">
-      <span>作者: {{author}}</span>
-      <span>{{date}}</span>
+      <span>作者: {{page.author}}</span>
+      <span>{{page.updateTime}}</span>
     </div>
   </header>
   <div class="post-content" id="postContent"></div>
