--- a/template/basicLayout.html
+++ b/template/basicLayout.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{description}}" />
     <meta name="author" content="{{author}}" />
+    <meta name="keywords" content="{{keywords.join(',')}}" />
     <link
       rel="shortcut icon"
       href="{{baseUrl}}favicon.ico"
