--- a/template/index.html
+++ b/template/index.html
@@ -19,20 +19,39 @@
       href="{{baseUrl}}favicon.ico"
       type="image/x-icon"
     />
-    <link
-      rel="stylesheet"
-      href="{{baseUrl}}assets/css/normalize.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="preload stylesheet"
-      crossorigin="anonymous"
-      href="{{baseUrl}}assets/css/basic.css"
-      as="style"
-    />
+    <script src="{{baseUrl}}assets/lib/tailwindcss.min.js"></script>
+    <script defer src="{{baseUrl}}assets/lib/alpinejs.anchor.min.js"></script>
+    <script defer src="{{baseUrl}}assets/lib/alpinejs.min.js"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          colors: {
+            'base-100': '#ffffff',
+            'base-200': '#f2f7ff',
+            'base-300': '#e3e9f4',
+            'base-content': '#394e6a',
+            primary: '#0069ff',
+            'primary-content': '#cee4ff',
+            secondary: '#463aa2',
+            'secondary-content': '#d5d7ef',
+            accent: '#c148ac',
+            'accent-content': '#0e020b',
+            neutral: '#021431',
+            'neutral-content': '#c5cbd3',
+            info: '#93e7fb',
+            'info-content': '#081315',
+            success: '#81cfd1',
+            'success-content': '#061010',
+            warning: '#efd7bb',
+            'warning-content': '#14110d',
+            error: '#e58b8b',
+            'error-content': '#120707',
+          },
+        },
+      }
+    </script>
   </head>
-  <body id="top">
+  <body id="top" class="bg-base-300 text-base-content text-base">
     {% include "basicLayout.html" %}
   </body>
 </html>
