--- a/template/basicLayout.html
+++ b/template/basicLayout.html
@@ -1,51 +1,36 @@
-<header class="h-16 bg-base-100">
-  <nav class="md:container md:mx-auto h-full flex justify-between items-center">
-    <div>
-      <a href="{{baseUrl}}" title="{{siteTitle}}">{{siteTitle}}</a>
+<header class="bg-base-100">
+  <nav class="md:container md:mx-auto navbar">
+    <div class="flex-none">
+      <a
+        class="btn btn-ghost text-xl text-primary"
+        href="{{baseUrl}}"
+        title="{{siteTitle}}"
+        >{{siteTitle}}</a
+      >
     </div>
-    <div class="hidden flex-1 md:flex max-w-lg flex items-center gap-4">
-      {% for category in categories %} {% if loop.index0 < 4 %}
-      <div
-        class="flex items-center px-4 py-2 rounded hover:bg-primary hover:text-primary-content cursor-pointer"
+    <div class="flex-1 justify-end">
+      <input
+        type="text"
+        placeholder="Search..."
+        class="input input-sm input-bordered max-w-xs"
+      />
+    </div>
+    <div class="dropdown dropdown-hover dropdown-bottom dropdown-end">
+      <div tabindex="0" role="button" class="btn btn-sm m-1">...</div>
+      <ul
+        tabindex="0"
+        class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52"
       >
-        <a
-          href="{{baseUrl}}{{_coreConfig.outputCategoryDir}}/{{category | urlencode}}"
-          title="{{category}}"
-          >{{category}}</a
-        >
-      </div>
-      {% endif %}{% endfor %} {% if categories.length > 4 %}
-      <div
-        class="flex items-center px-4 py-2 rounded hover:bg-primary hover:text-primary-content cursor-pointer"
-        x-data="{ show: false }"
-        x-ref="rest"
-        @mouseenter="show = true"
-        @mouseleave="show = false"
-      >
-        <a> ... </a>
-        <ul
-          x-show="show"
-          x-anchor.bottom-start="$refs.rest"
-          x-transition
-          class="bg-base-100 p-2 rounded-md shadow-xl"
-        >
-          {% for category in categories %} {% if loop.index0 >= 4 %}
-          <li
-            class="flex items-center px-4 py-2 rounded text-base-content hover:bg-primary hover:text-primary-content cursor-pointer"
+        {% for category in categories %}
+        <li>
+          <a
+            href="{{baseUrl}}{{_coreConfig.outputCategoryDir}}/{{category}}"
+            title="{{category}}"
+            >{{category}}</a
           >
-            <a
-              href="{{baseUrl}}{{_coreConfig.outputCategoryDir}}/{{category | urlencode}}"
-              title="{{category}}"
-              >{{category}}</a
-            >
-          </li>
-          {% endif %} {% endfor %}
-        </ul>
-      </div>
-      {% endif %}
-    </div>
-    <div class="search">
-      <input type="text" id="search" placeholder="Search..." />
+        </li>
+        {% endfor %}
+      </ul>
     </div>
   </nav>
 </header>
@@ -53,4 +38,3 @@
 <footer class="h-16 flex justify-center items-center">
   <span class="text-neutral-content text-sm">© 2023 {{siteTitle}}</span>
 </footer>
-<script src="{{baseUrl}}assets/js/search.js"></script>
