feat:add article template

--- a/template/basicLayout.html
+++ b/template/basicLayout.html
@@ -17,10 +17,11 @@
       />
     </div>
     <label class="swap swap-rotate mx-4">
-      <input type="checkbox" class="theme-controller" value="forest" />
+      <input type="checkbox" @change="toggleTheme" />
       <!-- moon icon -->
       <svg
-        class="swap-on fill-current w-6 h-6"
+        :class="getCurrentTheme() === 'forest' ? 'swap-off' : 'swap-on'"
+        class="fill-current w-6 h-6"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -30,7 +31,8 @@
       </svg>
       <!-- sun icon -->
       <svg
-        class="swap-off fill-current w-6 h-6"
+        :class="getCurrentTheme() === 'nord' ? 'swap-off' : 'swap-on'"
+        class="fill-current w-6 h-6"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -60,7 +62,12 @@
 </header>
 <main class="flex-1 flex container mx-auto p-10">
   <div class="w-full h-full lg:w-2/3">
-    {% if type !== 'content' %} {% include 'list.html' %} {% endif %}
+    <!-- prettier-ignore -->
+    {% if type !== 'content' %}
+      {% include 'list.html' %}
+    {% else %}
+      {% include 'article.html' %}
+    {% endif %}
   </div>
   <div class="hidden h-full lg:block lg:w-1/3"></div>
 </main>
