--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
   <body
     id="top"
     class="bg-base-300 text-base-content text-base min-h-full flex flex-col justify-between"
-    x-init="console.log('Alpinejs loaded')"
+    x-init="setTheme"
   >
     {% include "basicLayout.html" %}
     <script src="{{baseUrl}}assets/js/common.js"></script>
