feat:finish search template logic

--- a/template/basicLayout.html
+++ b/template/basicLayout.html
@@ -13,6 +13,7 @@
         type="text"
         placeholder="Search..."
         class="input input-sm input-bordered max-w-xs"
+        id="searchInput"
         @keyup.enter="search"
       />
     </div>
