--- a/template/article.html
+++ b/template/article.html
@@ -1,4 +1,4 @@
-<article class="prose w-full">
+<article class="prose w-full max-w-full">
   <div class="stat">
     <div class="stat-title">{{author}}</div>
     <h2 class="stat-value my-4">{{title}}</h2>
