--- a/template/basicLayout.html
+++ b/template/basicLayout.html
@@ -1,6 +1,6 @@
 <header class="bg-base-100 max-w-full">
   <nav class="container mx-auto navbar">
-    <div class="flex-none">
+    <div>
       <a
         class="btn btn-ghost text-xl text-primary"
         href="{{baseUrl}}"
@@ -8,7 +8,15 @@
         >{{siteTitle}}</a
       >
     </div>
-    <div class="flex-1 justify-end">
+    <div class="flex-1 navbar-center justify-center">
+      {#
+      <!-- prettier-ignore -->
+      #}
+      {% if categories.length or seriesList.length or tags.length %}
+      {% include 'menu.html' %}
+      {% endif %}
+    </div>
+    <div class="flex-none">
       <input
         type="text"
         placeholder="Search..."
@@ -19,7 +27,9 @@
     </div>
     <label class="swap swap-rotate mx-4">
       <input type="checkbox" @change="toggleTheme" />
+      {#
       <!-- moon icon -->
+      #}
       <svg
         :class="getCurrentTheme() === 'forest' ? 'swap-off' : 'swap-on'"
         class="fill-current w-6 h-6"
@@ -30,7 +40,9 @@
           d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
         />
       </svg>
+      {#
       <!-- sun icon -->
+      #}
       <svg
         :class="getCurrentTheme() === 'nord' ? 'swap-off' : 'swap-on'"
         class="fill-current w-6 h-6"
@@ -42,7 +54,9 @@
         />
       </svg>
     </label>
-    <div class="dropdown dropdown-hover dropdown-bottom dropdown-end">
+    <div
+      class="inline-block lg:hidden dropdown dropdown-hover dropdown-bottom dropdown-end"
+    >
       <div tabindex="0" role="button" class="btn btn-sm m-1">...</div>
       <ul
         tabindex="0"
@@ -51,7 +65,7 @@
         {% for category in categories %}
         <li>
           <a
-            href="{{baseUrl}}{{_coreConfig.outputCategoryDir}}/{{category}}"
+            href="{{baseUrl}}{{_coreConfig.category}}/{{category}}"
             title="{{category}}"
             >{{category}}</a
           >
@@ -63,7 +77,9 @@
 </header>
 <main class="flex-1 flex container mx-auto p-10">
   <div class="w-full h-full lg:w-2/3">
+    {#
     <!-- prettier-ignore -->
+    #}
     {% if type !== 'content' %}
       {% include 'list.html' %}
     {% else %}
