--- a/template/menu.html
+++ b/template/menu.html
@@ -5,6 +5,9 @@
         >{{home | default('Home')}}</a
       >
     </li>
+    {#
+    <!-- prettier-ignore -->
+    #}
     {% if categories.length %}
     <li>
       <div class="dropdown dropdown-hover dropdown-bottom dropdown-end">
